--- a/user-management-app-server/src/main/resources/db/changelog/changes/db.changelog-1.0.yaml
+++ b/user-management-app-server/src/main/resources/db/changelog/changes/db.changelog-1.0.yaml
@@ -27,6 +27,7 @@ databaseChangeLog:
             type: varchar(80)
             constraints:
               nullable: false
+              unique: true
         - column:
             name: password
             type: varchar(60)
