--- a/user-management-app-ui/package.json
+++ b/user-management-app-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "build": "^0.1.4",
     "run": "^1.4.0",
     "rxjs": "~6.6.0",
