--- a/user-management-app-server/gradle.properties
+++ b/user-management-app-server/gradle.properties
@@ -5,3 +5,6 @@ liquibaseVersion=4.4.3
 mariaDbClientVersion=2.7.4
 modelMapperVersion=2.4.4
 jjwtVersion=0.9.1
+queryDslVersion=5.0.0
+javaxAnApiVersion=1.3.2
+jpaVersion=1.0.2.Final
