--- a/user-management-app-server/src/main/resources/application.properties
+++ b/user-management-app-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Connection Properties
-spring.datasource.url=jdbc:mariadb://localhost:3308/usermanagementapp
+spring.datasource.url=jdbc:mariadb://user-management-app-db:3306/usermanagementapp
 spring.datasource.username=root
-spring.datasource.password=ioannis
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
